--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -12,25 +12,7 @@
                 <div class="card-body">
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {% for field in form %}
-                            <div class="mb-3">
-                                {{ field.label_tag }}
-                                {% if field.name == 'title' %}
-                                    <input type="text" name="{{ field.name }}" id="{{ field.id_for_label }}" class="form-control" value="{{ field.value|default:"" }}">
-                                {% elif field.name == 'excerpt' %}
-                                    <textarea name="{{ field.name }}" id="{{ field.id_for_label }}" rows="5" class="form-control">{{ field.value|default:"" }}</textarea>
-                                {% else %}
-                                    {{ field }}
-                                {% endif %}
-
-                                {% if field.help_text %}
-                                    <small class="form-text text-muted">{{ field.help_text }}</small>
-                                {% endif %}
-                                {% for error in field.errors %}
-                                    <div class="text-danger">{{ error }}</div>
-                                {% endfor %}
-                            </div>
-                        {% endfor %}
+                        {% crispy form %}
                         <button type="submit" class="btn btn-success mt-3">Save</button>
                     </form>
                 </div>
@@ -38,6 +20,8 @@
         </div>
     </div>
 </div>
-{{ form.media }} 
+{% endblock %}
 
-{% endblock content %}
+{% block extra_scripts %}
+    {{ form.media }}
+{% endblock %}
