added cover image caption

--- a/templates/base.html
+++ b/templates/base.html
@@ -200,7 +200,7 @@
         </div>
     </div>
 
-    <main class="container mt-4">
+    <main class="container mt-4 bg-light">
         {% block content %}{% endblock %}
     </main>
 
