--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -27,22 +27,22 @@
                 </div>
                 <hr class="my-4">
 
-                <div class="share-buttons my-4">
-                    <h5 class="d-inline-block me-3">Share this post:</h5>
+                <div class="share-buttons my-4 d-flex flex-wrap align-items-center">
+                    <h5 class="me-3 my-2">Share this post:</h5>
                     <a href="https://twitter.com/intent/tweet?text={{ post.title }}&url={{ request.build_absolute_uri }}" 
-                        target="_blank" class="btn btn-info text-white me-2" rel="noopener noreferrer">
+                        target="_blank" class="btn btn-info text-white me-2 mb-2" rel="noopener noreferrer">
                         <i class="fab fa-twitter"></i> Twitter
                     </a>
                     <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" 
-                        target="_blank" class="btn btn-primary me-2" rel="noopener noreferrer">
+                        target="_blank" class="btn btn-primary me-2 mb-2" rel="noopener noreferrer">
                         <i class="fab fa-facebook"></i> Facebook
                     </a>
                     <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&title={{ post.title }}" 
-                        target="_blank" class="btn btn-secondary me-2" rel="noopener noreferrer">
+                        target="_blank" class="btn btn-secondary me-2 mb-2" rel="noopener noreferrer">
                         <i class="fab fa-linkedin"></i> LinkedIn
                     </a>
                     <a href="https://wa.me/?text={{ post.title|urlencode }}%20%2D%20{{ request.build_absolute_uri }}" 
-                        class="btn btn-success" 
+                        class="btn btn-success mb-2" 
                         target="_blank" 
                         rel="noopener noreferrer">
                         <i class="fab fa-whatsapp"></i> WhatsApp
