--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block extra_scripts %}
-    <!-- TinyMCE CDN -->
+    <!-- TinyMCE CDN with your API key -->
     <script src="https://cdn.tiny.cloud/1/2vgdnwv5ng4sbkhjohjdx108y6ik1ukn6wtp7zdv2sba8ybi/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
     <script>
@@ -37,7 +37,14 @@
                 height: 400,
                 menubar: false,
                 plugins: "advlist autolink lists link image charmap print preview anchor searchreplace visualblocks code fullscreen insertdatetime media table code help wordcount",
-                toolbar: "undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help"
+                toolbar: "undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help",
+                
+                setup: function (editor) {
+                    // ensure content is updated to underlying textarea before submit
+                    editor.on('change', function () {
+                        editor.save();
+                    });
+                }
             });
         });
     </script>
