--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -48,7 +48,7 @@
       selector: '#id_content',
       height: 400,
       menubar: false,
-      plugins: "advlist autolink lists link image charmap print preview anchor searchreplace visualblocks code fullscreen insertdatetime media table code help wordcount",
+      plugins: "advlist autolink lists link image charmap preview anchor searchreplace visualblocks code fullscreen insertdatetime media table help wordcount",
       toolbar: "undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help",
       setup: function(editor) {
         editor.on('change', function() {
